<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:keepScreenOn="true">

    <ImageView
...
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/capture_button"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/capture" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/masksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@android:color/white"
...
