<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="2dp"
    android:layout_width="300dp"
    android:layout_height="300dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mask_background"
        android:gravity="bottom|center_horizontal"
        android:textSize="16sp" />

</LinearLayout>